# BmWorkFlow

./: .gitignore  CMakeLists.txt  README.md  main.cpp
resources/: DefaultStyle.json  resources.qrc
src/: bmtestdata.h  bmtestloadmodel.cpp  bmtestloadmodel.h  bmtestloadwidget.cpp  bmtestloadwidget.h  bmtestloadwidget.ui  bmtestshowmodel.cpp  bmtestshowmodel.h  bmtestshowwidget.cpp  bmtestshowwidget.h  bmtestshowwidget.ui  connection.cpp  connection.h  connectiongeometry.cpp  connectiongeometry.h  connectiongraphicsobject.cpp  connectiongraphicsobject.h  connectionpainter.cpp  connectionpainter.h  connectionstate.cpp  connectionstate.h  datamodelregistry.cpp  datamodelregistry.h  flowscene.cpp  flowscene.h  flowview.cpp  flowview.h  imageloadermodel.cpp  imageloadermodel.h  imageshowmodel.cpp  imageshowmodel.h  memory.h  node.cpp  node.h  nodeconnectioninteraction.cpp  nodeconnectioninteraction.h  nodedata.h  nodedatamodel.cpp  nodedatamodel.h  nodegeometry.cpp  (+11 more)
